k8s/automation-server/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: automation-server
spec:
  stripPrefix:
    prefixes:
      - /automation
