k8s/automation-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automation-server
  labels:
    name: automation-server
    app: automation-server
