k8s/automation-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automation-server
  namespace: automation-server
  labels:
    app: automation-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /automation(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: automation-server
            port:
              number: 8000
